--- a/src/main/resources/templates/mypage/my-point.html
+++ b/src/main/resources/templates/mypage/my-point.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleag.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -144,7 +144,7 @@
                     <div class="css-ow22sl e1v2ggz01">
                         <div class="css-1h25ori e1t6i3i25">
                             <div class="css-0 e1t6i3i24"><h2 class="css-o538wr e1t6i3i23">사용 가능한 휴지롤</h2>
-                                <p class="css-of8h0b e1t6i3i22">1,000 P</p></div>
+                                <p class="css-of8h0b e1t6i3i22"></p></div>
                             <div class="css-1yu4f1z e1t6i3i21"><p class="css-12fah4g e1t6i3i20">30일 이내 소멸 예정 휴지롤<b>0
                                 P</b></p></div>
                         </div>
@@ -154,7 +154,7 @@
                                         class="icon _chevron_right_12 css-w9u1sc"></span></button>
                             </div>
                             <div class="css-18ewygj e1rx7pum9">
-                                <div class="css-oc7sge e1rx7pum8">
+                                <!--<div class="css-oc7sge e1rx7pum8">
                                     <div class="css-1kwo4sf e1rx7pum7">
                                         <div class="css-3eylin e1rx7pum6">2023.05.15</div>
                                         <div class="css-15jzb03 e1rx7pum5">
@@ -168,7 +168,7 @@
                                         </div>
                                     </div>
                                     <div class="css-lgp5e9 e1rx7pum0">+ 1,000P</div>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                         <div class="css-e1gl82 e1v2ggz00">
@@ -195,4 +195,12 @@
     </div>
 </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
+<script src="/js/mypage/my-point.js"></script>
+<script src="/js/mypage/post.js"></script>
+<script th:inline="javascript">
+    let tissues = [[${tissues}]];
+
+</script>
 </html>
