--- a/src/main/resources/templates/mypage/my-point.html
+++ b/src/main/resources/templates/mypage/my-point.html
@@ -145,7 +145,7 @@
                         <div class="css-1h25ori e1t6i3i25">
                             <div class="css-0 e1t6i3i24"><h2 class="css-o538wr e1t6i3i23">사용 가능한 휴지롤</h2>
                                 <p class="css-of8h0b e1t6i3i22"></p></div>
-                            <div class="css-1yu4f1z e1t6i3i21"><p class="css-12fah4g e1t6i3i20">30일 이내 소멸 예정 휴지롤<b>0
+                            <div class="css-1yu4f1z e1t6i3i21"><p class="css-12fah4g e1t6i3i20">현재까지 모은 휴지롤:<b>
                                 P</b></p></div>
                         </div>
                         <div class="css-a4hf5k e1rx7pum13">
