--- a/src/main/resources/templates/admin/floging.html
+++ b/src/main/resources/templates/admin/floging.html
@@ -68,8 +68,8 @@
             <div class="memberLists">
                 <div id="root">
                     <div>
-                        <span>총 <th:block th:text="${adminPagination.total} +'개'">
-                        </th:block></span>
+                        <!--                        <span>총 <th:block th:text="${adminPagination.total} +'개'">-->
+                        <!--                        </th:block></span>-->
                         <button class="deleteBtn">삭제</button>
                     </div>
                 </div>
