--- a/src/main/resources/static/css/admin/board.css
+++ b/src/main/resources/static/css/admin/board.css
@@ -10,7 +10,22 @@ html{
 	width:100%;
 	background-color:#e2e2e2;
 }
-
+.rightbtn:active {
+	background-color: #bcbcbc;
+}
+.rightbtn{
+	position: absolute;
+	right: 100px;;
+	width:65px;
+	height: 25px;
+	background-color: white;
+	border: 1px solid #bcbcbc;
+	cursor: pointer;
+	border-radius: 2px;
+	color: #6e6e6e;
+	box-shadow: 1px 1px 2px #bcb;
+	top: 101px;
+}
 
 
 div.wrap {
@@ -219,7 +234,7 @@ div.memberLists div#root div span {
 }
 
 div.memberLists div#root div button {
-	width: 50px;
+	width: 65px;
     height: 25px;
     background-color: white;
     border:1px solid #bcbcbc;
