--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -45,7 +45,7 @@
         <div class="mainContent">
             <div class="mainBox">
                 <div class="mainBoxList">
-                    <table th:object="${userVO}" class="userTable" >
+                    <table class="userTable" >
                         <tr class="tableTh" >
                             <th>최근가입자</th>
                             <th><a th:href="@{member}" class="moreSee">더보기 -></a><th>
@@ -57,12 +57,12 @@
                             <td>핸드폰 번호</td>
                             <td>가입날짜</td>
                         </tr>
-                        <tr>
-                            <td th:text="*{userIdentification}"></td>
-                            <td th:text="*{userNickname}"></td>
-                            <td th:text="*{userTissue}"></td>
-                            <td th:text="*{userRole}"></td>
-                            <td th:text="*{userCreatedDate}"></td>
+                        <tr th:each="user : ${userRecents}">
+                            <td th:text="${user.userIdentification}"></td>
+                            <td th:text="${user.userNickname}"></td>
+                            <td th:text="${user.userTissue}"></td>
+                            <td th:text="${user.userRole}"></td>
+                            <td th:text="${user.userCreatedDate}"></td>
                         </tr>
                     </table>
                 </div>
@@ -123,8 +123,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/admin/side-bar.js"></script>
 <script th:inline="javascript">
-    let user1 = [[${users}]];
-    console.log(user1);
-
+    let user = [[${userRecents}]];
+    console.log(user);
 </script>
 </html>
