--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -50,13 +50,12 @@
                 <div class="memberSearch">
                     <div class="memberSearchInput">
                         <select name="type">
-                            <option value="t" th:selected="${search.type eq 't'}">제목</option>
-                            <option value="u" th:selected="${search.type eq 'u'}">작성자</option>
+                            <option value="t" th:selected="${search != null and search.type eq 't'}">제목</option>
+                            <option value="u" th:selected="${search != null and search.type eq 'u'}">작성자</option>
                         </select>
                         <div>
-                            <input type="text" name="keyword" th:value="${search.keyword}" placeholder="검색어를 입력하세요">
+                            <input type="text" name="keyword" th:value="${search != null ? search.keyword : ''}" placeholder="검색어를 입력하세요">
                         </div>
-
 
                         <button class="searchBtn">
                             <img src="/image/search.png">
@@ -71,17 +70,17 @@
                         <span>총<th:block th:text="${adminPagination.total} +'개'">
                         </th:block>
                             </span>
-                        <button class="deleteBtn">삭제</button>
+                        <button onclick="deleteNotice()" class="deleteBtn">삭제</button>
                     </div>
                 </div>
                 <form action="#" class="deleteForm">
                     <input type="hidden" name="page" value="${criteria.page}">
                     <input type="hidden" name="type" value="${criteria.type}">
-<!--                    <input type="hidden" name="keyword" value="${criteria.keyword}">-->
+                    <!--                    <input type="hidden" name="keyword" value="${criteria.keyword}">-->
                     <table class="noticeTable">
                         <thead>
                         <tr class="tableTh" style="border-top:3px solid #6e6e6e;">
-                            <td class="inputCheckBoxAllBtn"><input class="inputCheckBoxAll" type="checkbox"></td>
+                            <td class="inputCheckBoxAllBtn"><input class="inputCheckBoxAll" type="checkbox" id="checkAll"></td>
                             <td>공지사항 번호</td>
                             <td>제목</td>
                             <td>작성자</td>
